--- a/style.css
+++ b/style.css
@@ -94,3 +94,9 @@ footer {
 footer p {
 	text-align:center;
 }
+@media screen and (max-width: 480px) {
+	img,audio,video {
+	width:100%;
+	height:100%;
+	}
+}
